--- a/web/public/css/stylelogin.css
+++ b/web/public/css/stylelogin.css
@@ -11,7 +11,8 @@ body{
 #close {
 	text-decoration: none;
 	color: orangered;
-	width: 250px; height: 250px;
+	margin: 10px 0px 10px 0px;
+	font-size: 20px;
 }
 
 .main{
